# vimana2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  diesel.toml
frontend/: package.json  pnpm-lock.yaml
frontend/app/components/: AnalysisSection.tsx  Navbar.tsx  RefuelForm.tsx  VehicleCard.tsx  VehicleDetails.tsx  login-form.tsx
frontend/app/components/Modals/: CreateVehicleModal.tsx  DeleteVehicleModal.tsx  EditVehicleModal.tsx  LogoutModal.tsx  UpdateVehicleModal.tsx  VehicleModal.tsx
frontend/app/components/ui/: button.tsx
frontend/app/hooks/: useBaseUrl.ts
frontend/app/routes/: _index.tsx  home.tsx  refuel.tsx  vehicle.$vehicleId.tsx
frontend/app/services/: vehicleService.ts
frontend/app/types/: vehicle.d.ts
migrations/2024-11-14-020515_create_users/: up.sql
migrations/2024-11-14-020519_create_vehicles/: up.sql
migrations/2024-11-14-034159_add_superuser/: down.sql  up.sql
migrations/2024-11-14-034750_create_sessions/: up.sql
migrations/2024-11-19-040709_create_vehicles/: down.sql  up.sql
migrations/2024-11-20-025402_create_odometer/: down.sql  up.sql
migrations/2024-11-20-025412_create_refuel/: down.sql  up.sql
src/: handlers.rs  main.rs  middleware.rs  models.rs  queries.rs  renders.rs  requests.rs  schema.rs  services.rs
template/: home.html  login.html
templates/: home.html  login.html  refuel.html  vehicle.html
