[package]
name = "vimana2"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-session = "0.6"
diesel = { version = "2", features = ["postgres", "chrono", "r2d2", "uuid"] }
pq-sys = { version = "0.6", features = ["bundled"] }
openssl-sys = { version = "0.9.100", features = ["vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.11"
dotenv = "0.15"
uuid = { version = "1", features = ["serde", "v4"] }
actix-cors = "0.7.0"
env_logger = "0.11.5"
log = "0.4.22"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.31"
rand = "0.8.5"
lazy_static = "1.5.0"
actix-files = "0.6.6"
tera = "1.20.0"
